tests/Core/negative/parsing/test002.jvc
def main :=
  let x := x + 1 in x;
